[23454] fix documents menu tooltips and remove duplicate import item